[project]
name = "advanced_ai_enhanced_research_automation"
version = "0.1.0"
description = "advanced_ai_enhanced_research_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
advanced_ai_enhanced_research_automation = "advanced_ai_enhanced_research_automation.main:run"
run_crew = "advanced_ai_enhanced_research_automation.main:run"
train = "advanced_ai_enhanced_research_automation.main:train"
replay = "advanced_ai_enhanced_research_automation.main:replay"
test = "advanced_ai_enhanced_research_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
